--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,6 +7,7 @@ warn_unused_configs = True
 strict_equality = True
 no_implicit_optional = True
 disallow_untyped_calls = True
+mypy_path = ./stubs/
 # Per-module options:
 
 # [mypy-mycode.foo.*]
